# file_tree_display

./: .gitignore  README.md  pyproject.toml
benchmark/: __init__.py  benchtest.py
docs/: BENCHMARKS.md  UNICODE_OUTPUT_NOTES.md
src/file_tree_display/: __init__.py  __main__.py  _constants.py  ftd.py
tests/: conftest.py  test_file_tree_display.py  test_ftd_cli.py
