[project]
name = "file_tree_display"
dynamic = ["version"]
authors = [
  { name="Yaron Dayan", email="yaronday77@gmail.com" },
]
description = "A utility for generating a visually structured directory tree."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

dependencies = [
    "build>=1.3.0",
    "nano-dev-utils>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yaronday/file_tree_display"
Issues = "https://github.com/yaronday/file_tree_display/issues"
license = "https://github.com/yaronday/file_tree_display/blob/master/LICENSE"

[project.scripts]
ftd = "file_tree_display.__main__:main"

[project.files]
license = { path = "LICENSE" }

[dependency-groups]
test = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/file_tree_display/__version__.py"
